--- a/styles/style.css
+++ b/styles/style.css
@@ -281,3 +281,72 @@ a{
     margin-top: 25px;
 
 }
+
+
+
+.yeloo{
+      width: 150px;
+    height: 150px;
+    background-color: #f5ed7b;
+    position: absolute;
+    margin-top: 500px;
+ 
+  
+    
+  
+}
+
+
+
+.red{
+    margin-top: 150px;
+
+    width: 500px;
+    height: 500px;
+    background-color: #0f8933;
+    position: relative;
+    margin-left: 150px;
+    
+  
+     
+}
+
+table, tr,td{
+    border: 2px solid black;
+    background-color: white;
+    align-items: center;
+
+}
+
+
+.tabla-td-2 ul{
+    list-style-type: disc;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 30px;
+    gap: 40px;    
+}
+
+
+.tabla-td-1{
+    width: 30%;
+
+}
+
+
+.tabla-td-2{
+    width: 70%;
+
+}
+
+
+.fi-ge, .fi-gb, .fi-fr, .fi-de{
+    width: 100px;
+
+border-radius: 20px;
+    margin: 0 auto;
+    margin-left: 20px;
+     margin-right: 20px;
+
+}
